@@ -1217,6 +1217,8 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
 		[propput, id(394), helpstring("property EnableOffLighting")] HRESULT EnableOffLighting([in] int newVal);
 		[propget, id(557), helpstring("property EnableLighting")] HRESULT EnableLighting([out, retval] int *pVal);
 		[propput, id(557), helpstring("property EnableLighting")] HRESULT EnableLighting([in] int newVal);
+		[propget, id(398), helpstring("property OnImageIsLightmap")] HRESULT OnImageIsLightmap([out, retval] int *pVal);
+		[propput, id(398), helpstring("property OnImageIsLightmap")] HRESULT OnImageIsLightmap([in] int newVal);
 	};
 
 	[
